fix a:hover color too light, a:visited too dark

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -85,11 +85,11 @@ pre {
 }
 
 a:visited {
-  color: black;
+  color: #002E8B;
 }
 
 
 a:hover {
-  color: pink;
+  color: blue;
 }
 
